[CCAP-683] Cleanup Github security alert for deprecated constructor